# passmx

./: CMakeLists.txt  README.md
docs/: install.md
include/passmx/: passmx.h  token.h
source/passmx/: main.cpp  passmx.cpp
